# storage/api-docs/api-docs.json
@@ -1057,10 +1057,15 @@
                             "multipart/form-data"
                         ],
                         "formBody": {
-                            "document": {
-                                "type": "file",
+                            "certificates": {
+                                "type": "array",
                                 "required": true,
-                                "description": "Sertifikat faylı (pdf, png, jpg, jpeg)"
+                                "description": "Sertifikatların siyahısı",
+                                "default": [
+                                    {
+                                        "document": "Sertifikat faylı (pdf, png, jpg, jpeg)"
+                                    }
+                                ]
                             }
                         },
                         "responses": {
